--- a/views/auth/register.pug
+++ b/views/auth/register.pug
@@ -15,6 +15,7 @@ block contain
         div.mt-4.mx-auto.max-w-md
             div.bg-white.py-8.px-4.shadow
                 form.space-y-5(method="POST" action="/auth/register" noValidate)
+                    input(type="hidden" name="_csrf" value= csrfToken)
                     div 
                         label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="name") Nombre
                         input#name.w-full.px.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Ingresa tu nombre" type="text" name="name" value=saved? saved.name:'')
